# ERA_LARC

./: .gitignore  README.md  pyproject.toml  setup.py
ERA_LARC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
notebooks/: STAC_ZARR.ipynb  thredds.ipynb
src/ERA_LARC/: GScript.py  TScript.py  __init__.py  main.py
